--- a/todo.txt
+++ b/todo.txt
@@ -99,7 +99,7 @@ TODO:
   - do ranged enemies need a melee attack? (can sit on them right now)
     - damage on contact
     - knockback stomp 
-  
+   
   - add more dodgeable attacks / enemies
     - laser is good
     - spread laser 
@@ -124,11 +124,23 @@ TODO:
     -black transition wipe?
 
 
-SMALL CLEANUP:
+SMALL CLEANUP:  
+  --still duplicate text/proc in buy screen sometimes
+  --dragon still only attacking once??
+
+  --stompy needs to wander randomly (towards middle of screen)
+
+  --pair melee normal enemy with ranged special and vice versa
+    -- add charger enemy
+    -- add mspd buff enemy
+
+  -- unit laser attack quieter
+  -- getting hit sound louder, animation smaller(?)
+
   --freeze UI when pause menu is open in buy screen
     - move settings buttons to new UI layer and freeze everything else?
     - what about arena
-    
+
   --items reroll when entering from mainmenu (can reroll by entering and leaving)
     --make gamestate into an object instead of passing 10+ params around
       --needs to be imported into the different States on load
