--- a/todo.txt
+++ b/todo.txt
@@ -123,6 +123,15 @@ TODO:
   -add title card + hp bar animation to start of boss battles
     -black transition wipe?
 
+  - 3 units kinda confusing, allow duplicates from the start
+    - separate items but combined control group
+  
+  -dragon needs another ability
+
+  -try to add charge enemy again
+
+
+
 
 SMALL CLEANUP:  
   --still duplicate text/proc in buy screen sometimes
@@ -140,14 +149,6 @@ SMALL CLEANUP:
   --freeze UI when pause menu is open in buy screen
     - move settings buttons to new UI layer and freeze everything else?
     - what about arena
-
-  --items reroll when entering from mainmenu (can reroll by entering and leaving)
-    --make gamestate into an object instead of passing 10+ params around
-      --needs to be imported into the different States on load
-      --or all that can be accessed from the gamestate itself
-        --need to replace a lot of vars...
-      --could have a Helper fn that puts all the gamestate vars on the State object
-        GameState:importInto(state)
     
   --stunned laser enemy still fires laser, and has no cooldown ("cast" never triggers, but laser happens in precast)
 
@@ -156,7 +157,7 @@ SMALL CLEANUP:
 
   --Helper.DamageCircle is hurting troops (overkill)
 
-  --troops aggro towards enemies, but not quite close enough to attack
+  --troops jitter when aggroing and moving towards enemy
   
   --all items are destroyed exiting buy screen, will trigger consumable effects
 
