--- a/todo.txt
+++ b/todo.txt
@@ -155,7 +155,8 @@ SMALL CLEANUP:
   --freeze UI when pause menu is open in buy screen
     - move settings buttons to new UI layer and freeze everything else?
     - what about arena
-    
+
+  --laser enemy rotates at end of precast (wrong state?)    
   --stunned laser enemy still fires laser, and has no cooldown ("cast" never triggers, but laser happens in precast)
 
   --dragon fire particles don't go far enough (and stay after fire ends)
