--- a/todo.txt
+++ b/todo.txt
@@ -162,7 +162,9 @@ SMALL CLEANUP:
     - move settings buttons to new UI layer and freeze everything else?
     - what about arena
 
-  --laser enemy rotates at end of precast (wrong state?)    
+  --laser enemy rotates at end of precast (wrong state?)
+    -retarget in enemy:update()? would have to be in normal state
+    
   --stunned laser enemy still fires laser, and has no cooldown ("cast" never triggers, but laser happens in precast)
 
   --dragon fire particles don't go far enough (and stay after fire ends)
