--- a/todo.txt
+++ b/todo.txt
@@ -142,6 +142,9 @@ TODO:
 
 
 SMALL CLEANUP:  
+
+  --troops no longer attack when assigned_target is set (right click)
+
   --add popup controls on level 1 (disable with checkbox)
     --reenable in settings?
 
@@ -162,9 +165,6 @@ SMALL CLEANUP:
   --pair melee normal enemy with ranged special and vice versa
     -- add charger enemy
     -- add mspd buff enemy
-
-  -- unit laser attack quieter
-  -- getting hit sound louder, animation smaller(?)
 
   --freeze UI when pause menu is open in buy screen
     - move settings buttons to new UI layer and freeze everything else?
@@ -216,6 +216,9 @@ get the playthrough to be fun:
 BUGS:
 --------------
 
+spread laser shoots wrong direction
+  - regular laser enemy starts rotating wrong way at end?
+  
 crash:
   crash when spawning units inside each other (fixed for boss though?)
   check global GameState references - had a bug trying to set the rallyEffect in the main menu
