adding launch spell and unit pushback on collision

--- a/todo.txt
+++ b/todo.txt
@@ -24,6 +24,9 @@ that makes special enemies randomly drop gold
 
 TODO:
 
+music:
+- get demoscene time machine?
+
 second-to-second combat touchup:
 -------------------
 - add enemy death explosion
