adding new items, trying to disable shop buttons while rerolling

--- a/todo.txt
+++ b/todo.txt
@@ -277,12 +277,13 @@ get the playthrough to be fun:
 BUGS:
 --------------
 
+can reroll items while rerolling items
+
 quit button disappears after oepning achieve AchievementsPanel
   -looks like it is related to paused state cycling
   -only happens when achievo panel is opened + closed
   - does not happen if options menu is opened + closed before achivements
 
-crash:
 
 movement:
   - rallied units dont attack once reaching the rally point anymore
