--- a/todo.txt
+++ b/todo.txt
@@ -29,8 +29,15 @@ TODO:
     needs to apply before hit, based on conditions (eg enemy chilled)
 
 -- need to clean up onHit 
-  (if chill and fire are on hit, all damage from that unit
-    will chill or burn)
+    if chill and fire are on hit, all damage from that unit
+      will chill or burn
+    but it should trigger on all enemies hit by laser
+    maybe a separate trigger for attacked enemies and 
+      passively hit ones (thorns, )
+
+-- shop reroll logic is messy, confuses rerolling part of the shop with rolling it for the first time
+  
+
 
 music:
 - get demoscene time machine?
