--- a/todo.txt
+++ b/todo.txt
@@ -299,6 +299,13 @@ get the playthrough to be fun:
 BUGS:
 --------------
 
+icenova not cancelling properly
+reduce movement speed of seeker enemies, reduce HP of seeker enemies
+unit cost is 10 in overlay, 5 in shop
+right click to sell item
+  sound effect?
+escape menu show damage numbers button cancel
+
 can reroll items while rerolling items
 
 what happens with multiple icenovas?
