--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,9 @@
+FINAL BUG TODO:
+- still have rare bug where enemies spawning on top of each other soft-crashes the game
+- swordsman can attack many times in a row
+- laser can't move while shooting with space (but can with m1?)
+
+
 PLAYTEST FEEDBACK:
   - special enemy damage reduced at tier 1
 
