--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 FINAL BUG TODO:
-- units spawning on each other soft-locks the game
-  enemies are coded to wait to spawn, but troops still resurrect on each other
+- archer repeat attacks are primary? no archer attacks are primary?
+- level UI group stays in place while moving camera (but walls move? maybe its related to physics)
 - laser can't move while shooting with space (but can with m1?)
 - laser cooldown triggers twice, once on end cast and once on end channel (?)
 
