use same knockback fn

--- a/todo.txt
+++ b/todo.txt
@@ -5,7 +5,7 @@ FINAL BUG TODO:
 - level UI group stays in place while moving camera (but walls move? maybe its related to physics)
 - laser can't move while shooting with space (but can with m1?)
 - laser cooldown triggers twice, once on end cast and once on end channel (?)
-
+- knockback end might re-enable steering, overwriting later effects
 
 PLAYTEST FEEDBACK:
   - special enemy damage reduced at tier 1
