added special swarmer types, dont draw buffs at 0 stacks

--- a/todo.txt
+++ b/todo.txt
@@ -2,65 +2,14 @@ FINAL BUG TODO:
 - need to make laser work with repeat and multishot
 - careful with the state changes in laser
 - laser cooldown triggers twice, once on end cast and once on end channel (?)
-
+- cooldown variables are a mess
+- might want to readd stopping to shoot? makes kiting more interesting?
 
 - knockback end might re-enable steering, overwriting later effects
 - knockback is a var, rallying is a state and a var, confusing
 - need to be able to disable player movement when knockbacked/suction
 - and prevent state change
 - but still rerally to existing point when knockback ends
-
-PLAYTEST FEEDBACK:
-  - special enemy damage reduced at tier 1
-
-  - can beat up to first boss without moving any units, just buying dmg items
-    - special attacks dont do enough damage
-
-  - some attacks default to 0/0
-
-  - flat amount of gold per level (even when shop gets expensive)
-  - drop gold from enemies? instead of flat per level
-
-  -fire synergy too compliated (does lava stack? does fire dmg on other units stack?)
-  - change stack gems to specify "ALL UNITS"
-
-  - change how fire explosion looks (have to know it's player team)
-    - make look like healing explosions?
-  
-  --wisdom talisman vs attackspeed
-  -- should be named the same
- 
---add 3rd econ item, sack of gold
-
-that makes special enemies randomly drop gold
-
-TODO:
-
--- add random wave spawns (all over)
--- add enemies during boss waves
-
--- add critical hit chance and critical hit damage
-  --onHitCallbacks isn't enough for +crit
-    needs to apply before hit, based on conditions (eg enemy chilled)
-
--- need to clean up onHit 
-    if chill and fire are on hit, all damage from that unit
-      will chill or burn
-    but it should trigger on all enemies hit by laser
-    maybe a separate trigger for attacked enemies and 
-      passively hit ones (thorns, )
-
--- shop reroll logic is messy, confuses rerolling part of the shop with rolling it for the first time
--- pause spawns when game is paused in arena (and spawn marks)
-
--- add attacking state for enemies (to sync with animation)
-  or convert enemy attack triggers into casts
-
--- player troops start casting every frame they move
-  because they are in 'normal' state
-  need a moving state
-    but needs to work with "keep moving while in aggro range"
-    maybe just do it for player troops
 
 music:
 - get demoscene time machine?
